# ALPR

./: LICENSE  MANIFEST.in  README.md  setup.cfg
ALPR/: license_recognition.py
