[metadata]
name = alpr
version = 0.0.2
author = Ismail Sacic
author_email = cicas03@hotmail.com
description = Automatic License Plate Recognition.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismail424/ALPR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True